buildscript {
    repositories {
        jcenter()
        maven {
            name = "forge"
            url = "http://files.minecraftforge.net/maven"
        }
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
    }
}
apply plugin: 'net.minecraftforge.gradle.forge'

tasks.withType(JavaCompile) {
    sourceCompatibility = "1.8"
    targetCompatibility = "1.8"
}

version = "1.0.1"
group = "nightkosh.gravestone_extended"
archivesBaseName = "GraveStone-Extended"

minecraft {
    version = "1.9.4-12.17.0.2051"
    runDir = "idea"

    mappings = "snapshot_20160518"
}

ext.apiSophisticatedWolves = "./api/sophisticated_wolves"
ext.apiThaumcraft = "./api/thaumcraft"

sourceSets {
    api {
        java {
            srcDir project.apiSophisticatedWolves
//            srcDir project.apiThaumcraft
        }
    }
}


dependencies {
//    compile fileTree(include: ['*.jar'], dir: 'external_libs')
    compile files("external_libs/GraveStone-1.9.4-Graves-1.0.1.jar")
}

jar {
//    exclude('forestry/**')
    exclude('**/*.db')
    exclude('assets/gravestone/techne_models/**')
}

processResources {
    // this will ensure that this task is redone when the versions change.
    inputs.property "version", project.version
    inputs.property "mcversion", project.minecraft.version

    // replace stuff in mcmod.info, nothing else
    from(sourceSets.main.resources.srcDirs) {
        include 'mcmod.info'

        // replace version and mcversion
        expand 'version': project.version, 'mcversion': project.minecraft.version
    }

    // copy everything else, thats not the mcmod.info
    from(sourceSets.main.resources.srcDirs) {
        exclude 'mcmod.info'
    }
}
